--- a/GRC/project_tt.runs/synth_1/.vivado.begin.rst
+++ b/GRC/project_tt.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="adam" Host="DESKTOP-L7VH7BR" Pid="612">
+    <Process Command="vivado.bat" Owner="adam" Host="LAPTOP-MFH2O9HI" Pid="12992">
     </Process>
 </ProcessHandle>
